force-app/main/default/objects/Contact/fields/Email_book_Pipedrive__c.field-meta.xml
<CustomField>
    <fullName>Email_book_Pipedrive__c</fullName>
    <label>Email book Pipedrive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>