force-app/main/default/objects/Contact/fields/Leadtrac_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Leadtrac_File_ID__c</fullName>
    <label>Leadtrac File ID (First File)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>