force-app/main/default/objects/Contact/fields/Owner_s_SSN__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_SSN__c</fullName>
    <inlineHelpText>Social Security number (SSN)</inlineHelpText>
    <label>Owner&apos;s SSN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>