force-app/main/default/objects/Contact/fields/Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Password_Hash__c</fullName>
    <description>Stores bcrypt hashed password for customer portal authentication.</description>
    <label>Password_Hash</label>
    <length>225</length>
    <type>Text</type>
</CustomField>