force-app/main/default/objects/Contact/fields/Phone_Book_Pipedrive__c.field-meta.xml
<CustomField>
    <fullName>Phone_Book_Pipedrive__c</fullName>
    <label>Phone Book Pipedrive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>