force-app/main/default/objects/Contact/fields/PhoneBurner__Last_Dispostion__c.field-meta.xml
<CustomField>
    <fullName>PhoneBurner__Last_Dispostion__c</fullName>
    <label>Last Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>