force-app/main/default/objects/Contact/fields/Portal_Auth_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_Auth_ID__c</fullName>
    <externalId>true</externalId>
    <label>Portal Auth ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>