force-app/main/default/objects/Contact/fields/Portal_Invite_Token__c.field-meta.xml
<CustomField>
    <fullName>Portal_Invite_Token__c</fullName>
    <label>Portal Invite Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>