force-app/main/default/objects/Contact/fields/Portal_MFA_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Portal_MFA_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal MFA Enrolled</label>
    <type>Checkbox</type>
</CustomField>