force-app/main/default/objects/Contact/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <label>Portal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Invite Sent</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>