force-app/main/default/objects/Contact/fields/Portal_Token_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Portal_Token_Expiration__c</fullName>
    <label>Portal Token Expiration</label>
    <type>DateTime</type>
</CustomField>