force-app/main/default/objects/Contact/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <formula>Owner.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Office</label>
    <type>Text</type>
</CustomField>