force-app/main/default/objects/Contact/fields/SFMC_Sync_c__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Sync_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFMC_Sync__c</label>
    <type>Checkbox</type>
</CustomField>