force-app/main/default/objects/Contact/fields/SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message__c</fullName>
    <label>SMS Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>