force-app/main/default/objects/Contact/fields/SMS_Message_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message_Name__c</fullName>
    <label>SMS Message Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>