force-app/main/default/objects/Contact/fields/SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>SMS_Status__c</fullName>
    <label>SMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>