force-app/main/default/objects/Contact/fields/TwilioSF__Last_Message_Status__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Last_Message_Status__c</fullName>
    <label>Last Message Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>undelivered</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>