force-app/main/default/objects/Contact/fields/TwilioSF__Unformatted_Mobile__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Unformatted_Mobile__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>DEPRECATED Unformatted Mobile</label>
    <type>Text</type>
</CustomField>