force-app/main/default/objects/Contact/recordTypes/Creditor_Contact.recordType-meta.xml
<RecordType>
    <fullName>Creditor_Contact</fullName>
    <active>true</active>
    <label>Creditor Contact</label>
</RecordType>