force-app/main/default/objects/Contact/validationRules/Phone_edit_access_to_Reps.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_edit_access_to_Reps</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $Profile.Name = &quot;Sales Rep&quot;,
  ISCHANGED(Phone)
)</errorConditionFormula>
    <errorMessage>Sales Reps are not allowed to edit the Phone field.</errorMessage>
</ValidationRule>